backends/drm: always do color management on NVidia GPUs

This comes with a small performance hit but ensures that night color works

BUG: 450327
BUG: 468895